# g2c

./: .gitignore  APPLICATION.md  ARCHITECTURE.md  BACKEND.md  CLAUDE.md  Cargo.toml  README.md  justfile  package-lock.json  package.json
.github/workflows/: deploy.yml  preview.yml
contracts/factory/: Cargo.toml
contracts/factory/src/: contract.rs  lib.rs  xlm.rs
contracts/smart-account/: Cargo.toml
contracts/smart-account/src/: contract.rs
contracts/status-message/: Cargo.toml
contracts/status-message/src/: contract.rs
contracts/webauthn-verifier/: Cargo.toml
contracts/webauthn-verifier/src/: contract.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs
crates/integration-tests/test_snapshots/contract_verifier/: reject_wrong_challenge_on_chain.1.json  reject_wrong_key_on_chain.1.json  verify_webauthn_assertion_on_chain.1.json
crates/integration-tests/test_snapshots/end_to_end/: same_keypair_verifies_offchain_and_onchain.1.json  smart_account_check_auth_rejects_wrong_key.1.json  smart_account_check_auth_with_passkey.1.json
crates/integration-tests/test_snapshots/smart_account_auth/: smart_account_check_auth_rejects_wrong_key.1.json  smart_account_check_auth_with_passkey.1.json
crates/integration-tests/test_snapshots/smart_account_setup/: context_rules_count_is_one.1.json  default_context_rule_is_default_type.1.json  deploy_with_passkey_signer.1.json
crates/integration-tests/tests/it/: contract_verifier.rs  end_to_end.rs  helpers.rs  main.rs  server_flow.rs  smart_account_auth.rs  smart_account_setup.rs
crates/passkey-core/: Cargo.toml
crates/passkey-core/src/: challenge.rs  contract_id.rs  error.rs  lib.rs  rp.rs  storage.rs
crates/passkey-core/src/webauthn/: authenticator.rs  client_data.rs  mod.rs  verify.rs
crates/passkey-server/: Cargo.toml
crates/passkey-server/src/: lib.rs  main.rs
crates/passkey-worker/: Cargo.toml  wrangler.toml
crates/passkey-worker/src/: handlers.rs  kv_store.rs  lib.rs
frontend/account/: index.html
frontend/dapp/: index.html
frontend/shared/: webauthn.js
frontend/worker-proxy/: index.js  wrangler.toml
