[workspace]
resolver = "2"
members = [
    "crates/passkey-core",
    "crates/passkey-worker",
    "crates/passkey-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2"
