[workspace]
resolver = "2"
members = [
    "crates/integration-tests",
    "contracts/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
base64 = "0.22"
soroban-sdk = "25.0.2"
stellar-accounts = { git = "https://github.com/OpenZeppelin/stellar-contracts.git", rev = "63167bb707edf4ad25e46572df11d4332d10b68e", package = "stellar-accounts" }

[profile.contract]
overflow-checks = true
inherits = "release"
opt-level = "z"
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
