[package]
name = "passkey-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
p256 = { version = "0.13", features = ["ecdsa"] }
sha2 = "0.10"
getrandom = { version = "0.2", features = ["js"] }
async-trait = "0.1"
stellar-strkey = "0.0.16"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
p256 = { version = "0.13", features = ["ecdsa"] }
