[package]
name = "passkey-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
passkey-core = { path = "../passkey-core" }
serde = { workspace = true }
serde_json = { workspace = true }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
