[package]
name = "passkey-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
passkey-core = { path = "../passkey-core" }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
worker = "0.4"
async-trait = "0.1"
getrandom = { version = "0.2", features = ["js"] }
